manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trabalho-infnet-service
  namespace: gitops-app
spec:
  selector:
    app: trabalho-infnet
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
