manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infnet-ingress
  namespace: gitops-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: trabalho-infnet.3.238.21.221.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trabalho-infnet-service
            port:
              number: 80
  tls:
  - hosts:
    - minha-app.184.73.247.186.sslip.io
    secretName: trabalho-infnet-tls
